<resources>
    <string name="app_name">BeginnerTaskFour</string>
    <string name="calculator">Calculator</string>
    <string name="exchange_rate">Exchange Rate</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="_1">1</string>
    <string name="m">m</string>
    <string name="ft">ft</string>
    <string name="meter">Meter</string>
    <string name="foot">Foot</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="double_zero">00</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="cancel">c</string>
    <string name="todo">TODO</string>
    <string name="click_to_calculate">Click to Calculate</string>
</resources>