<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvExchangeRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exchange_rate"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/tvUnitCalculator"
        app:layout_constraintStart_toEndOf="@+id/tvCalculator"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUnitCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_converter"
        android:textSize="20sp"
        android:textColor="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMeter"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExchangeRate">

        <TextView
            android:id="@+id/tvM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/m"
            android:textColor="@color/pink"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/meter"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvM"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etMeterValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:importantForAutofill="no"
            android:inputType="none"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clFoot"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clMeter">

        <TextView
            android:id="@+id/tvFt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ft"
            android:textColor="@color/pink"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/foot"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvFt"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFootValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clNumbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/clFoot"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/tv7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintStart_toEndOf="@+id/tv7"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintStart_toEndOf="@+id/tv8"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv7" />

        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintStart_toEndOf="@+id/tv4"
            app:layout_constraintTop_toBottomOf="@id/tv8" />

        <TextView
            android:id="@+id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintStart_toEndOf="@+id/tv5"
            app:layout_constraintTop_toBottomOf="@id/tv9" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv4" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintStart_toEndOf="@+id/tv1"
            app:layout_constraintTop_toBottomOf="@id/tv5" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintStart_toEndOf="@+id/tv2"
            app:layout_constraintTop_toBottomOf="@id/tv6" />

        <TextView
            android:id="@+id/tv00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/double_zero"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv1" />

        <TextView
            android:id="@+id/tv0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintStart_toEndOf="@+id/tv00"
            app:layout_constraintTop_toBottomOf="@id/tv2" />

        <TextView
            android:id="@+id/tvDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintStart_toEndOf="@+id/tv0"
            app:layout_constraintTop_toBottomOf="@id/tv3" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp"
            android:text="@string/cancel"
            android:textColor="@color/pink"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/ivBackspace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv3" />

        <ImageView
            android:id="@+id/ivBackspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/todo"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp"
            android:src="@drawable/ic_backspace_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvDot" />

        <ImageView
            android:id="@+id/ivCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp"
            android:src="@drawable/ic_refresh"
            app:layout_constraintBottom_toTopOf="@id/tvCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv6"
            android:contentDescription="@string/click_to_calculate" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>